Fix `SearchResult`'s title and menu overlapping

--- a/src/css/SearchTrack.scss
+++ b/src/css/SearchTrack.scss
@@ -10,6 +10,7 @@
 .Title {
     align-self: center;
     margin-left: 20px;
+    max-width: 72%;
 }
 
 #figure {
@@ -38,9 +39,10 @@
 #searchDropdownButton {
     align-self: center;
     margin-left: -20px;
-}
+    padding-left: 65px;
 
-#searchDropdownButton svg:hover {
-    cursor: pointer;
-    filter: brightness(0.7);
+    svg:hover {
+        cursor: pointer;
+        filter: brightness(0.7);
+    }
 }
